feat: Orderbook controller
