# src/main/kotlin/com/valrTechassessment/controller/OrderbookController.kt
@@ -1,0 +1,19 @@
+package com.valrTechassessment.controller
+
+import com.valrTechassessment.GetOrderBookResponse
+import com.valrTechassessment.OrderbookApiClient
+import com.valrTechassessment.service.OrderbookService
+import org.springframework.http.ResponseEntity
+import org.springframework.stereotype.Controller
+
+@Controller
+class OrderbookController(
+    private val orderbookService: OrderbookService
+) : OrderbookApiClient {
+
+    override fun getOrderbook(currencyPair: String): ResponseEntity<GetOrderBookResponse> {
+        val orderbook = orderbookService.getOrderbook()
+        return ResponseEntity.ok(orderbook)
+
+    }
+}
