# src/main/kotlin/com/valrTechassessment/models/AskOrders.kt
@@ -1,0 +1,16 @@
+package com.valrTechassessment.models
+
+data class AskOrders(
+    val side: Side,
+    val quantity: String,
+    val price: String,
+    val currencyPair: String,
+    val orderCount: Int
+) {
+    enum class Side(
+        val string: String
+    ) {
+        SELL("sell"),
+        BUY("buy")
+    }
+}
